# railway-cli-release-testing

./: Cargo.toml  package-lock.json
.github/workflows/: release.yml
src/: config.rs  errors.rs
src/commands/: login.rs  up.rs
