[package]
name = "railwayapp"
version = "3.5.2"
edition = "2021"
license = "MIT"
authors = ["Railway <contact@railway.app>"]
description = "Interact with Railway via CLI"
readme = "README.md"
homepage = "https://github.com/railwayapp/cli"
repository = "https://github.com/railwayapp/cli"
rust-version = "1.67.1"
default-run = "railway"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "railway"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "suggestions"] }
colored = "2.1.0"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12.0", default-features = false, features = [
  "rustls-tls", "json"
] }
chrono = { version = "0.4.35", features = ["serde"], default-features = false }
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
paste = "1.0.14"
tokio = { version = "1.36.0", features = ["full"] }
clap_complete = "4.5.1"
open = "5.1.2"
inquire = "0.7.2"
hyper = { version = "1.2.0", features = ["server", "http1"] }
base64 = "0.22.0"
http-body-util = "0.1.1"
rand = "0.8.5"
hostname = "0.3.1"
indicatif = "0.17.8"
indoc = "2.0.4"
console = "0.15.8"
box_drawing = "0.1.2"
textwrap = "0.16.1"
gzp = { version = "0.11.3", default-features = false, features = [
  "deflate_rust",
] }
tar = "0.4.40"
synchronized-writer = "1.1.11"
ignore = "0.4.22"
num_cpus = "1.16.0"
futures = { version = "0.3.30", default-features = false, features = [
  "compat",
  "io-compat",
] }
names = { version = "0.14.0", default-features = false }
graphql-ws-client = { version = "0.8.0", features = ["client-graphql-client", "tungstenite"] }
async-tungstenite = { version = "0.25.0", features = [
  "tokio-runtime",
  "tokio-rustls-native-certs",
] }
is-terminal = "0.4.12"
serde_with = "3.7.0"
ctrlc = "3.4.4"
which = "6.0.0"
thiserror = "1.0.58"
winapi = { version = "0.3.9", features = ["minwindef", "tlhelp32", "processthreadsapi", "handleapi", "winerror"] }
